#181 - feat/separateDataAcrossBranches - @duclnph24870 - feat:Add the feature to separate data for each campus to the Business API
