# src/docs/swagger_datn.yaml
@@ -24,8 +24,6 @@ tags:
       description: 'Cơ sở'
     - name: 'Configtimes'
       description: 'Đặt thời gin mở form chọn doanh nghiệp, nộp CV, nộp biên bản, nộp báo cáo'
-    - name: 'Businesses'
-      description: 'Doanh nghiệp đăng ký tuyển sinh thực tập'
 
 schemes:
     - http
@@ -706,254 +704,6 @@ paths:
                     description: 'successful operation'
                 '400':
                     description: 'Invalid status value'
-    /business:
-        get:
-            security:
-                - Bearer: []
-            tags:
-                - 'Businesses'
-            summary: 'Danh sách doanh nghiệp'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - in: 'query'
-                  name: 'limit'
-                  default: 10
-                - in: 'query'
-                  name: 'page'
-                  default: 1
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
-        # post:
-        #   security:
-        #     - Bearer: []
-        #   tags:
-        #   - "Businesses"
-        #   summary: "Thêm mới doanh nghiệp"
-        #   description: ""
-        #   operationId: "addNewBusiness"
-        #   parameters:
-        #     - name: "data"
-        #       in: "body"
-        #       description: "Tham số key/value thêm mới doanh nghiệp"
-        #       required: true
-        #       schema:
-        #         type: "object"
-        #         properties:
-        #           campus_id:
-        #             type: "string"
-        #             default: "6247da5ee56ba5e634559901"
-        #             description: "mã cơ sở, VD: cơ sở hà nội"
-        #           smester_id:
-        #             type: "string"
-        #             default: "62cf870f4858743781d08b27"
-        #             description: "Kỳ học"
-        #           marjors:
-        #             type: "string"
-        #             default: "62cf83eb4858743781d08ad3"
-        #             description: "Chuyên ngành : Thiết kế website"
-        #           data:
-        #             type: "array"
-        #             items:
-        #               properties:
-        #                 campus_id:
-        #                   type: "string"
-        #                   default: "6247da5ee56ba5e634559901"
-        #                 course:
-        #                   type: "string"
-        #                   default: "15.3"
-        #                 email:
-        #                   type: "string"
-        #                   default: "example@fpt.edu.vn"
-        #                 mssv:
-        #                   type: "string"
-        #                   default: "ph1111"
-        #                 name:
-        #                   type: "string"
-        #                   default: "Nguyễn Văn A"
-        #                 smester_id:
-        #                   type: "string"
-        #                   default: "62cf870f4858743781d08b27"
-        #                   description: "Kỳ học"
-        #                 status:
-        #                   type: "string"
-        #                   default: "TN21"
-        #                 supplement:
-        #                   type: "string"
-        #                   default: undefined
-        #   responses:
-        #     "200":
-        #       description: "successful operation"
-        #     "201":
-        #       description: "Already exist major"
-        #     "400":
-        #       description: "Invalid major"
-    /business/new:
-        post:
-            security:
-                - Bearer: []
-            tags:
-                - 'Businesses'
-            summary: 'Thêm mới doanh nghiệp'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'data'
-                  in: 'body'
-                  description: 'Tham số key/value thêm mới sinh viên'
-                  required: true
-                  schema:
-                      type: 'object'
-                      properties:
-                          campus_id:
-                              type: 'string'
-                              default: '6247da5ee56ba5e634559901'
-                              description: 'mã cơ sở, VD: cơ sở hà nội'
-                          smester_id:
-                              type: 'string'
-                              default: '62cf870f4858743781d08b27'
-                              description: 'Kỳ học'
-                          marjors:
-                              type: 'string'
-                              default: '62cf83eb4858743781d08ad3'
-                              description: 'Chuyên ngành : Thiết kế website'
-                          data:
-                              type: 'array'
-                              items:
-                                  properties:
-                                      name:
-                                          type: 'string'
-                                          default: 'swagger'
-                                          description: 'Tên doanh nghiệp'
-                                      intershipPosition:
-                                          type: 'string'
-                                          description: 'Vị trí thực tập tại doanh nghiệp'
-                                      majors:
-                                          type: 'integer'
-                                          description: 'Mã chuyên ngành'
-                                          default: '62cf83eb4858743781d08ad3'
-                                      amount:
-                                          type: 'integer'
-                                          description: 'Số lượng sinh viên cần tuyển'
-                                      smester_id:
-                                          type: 'integer'
-                                          description: 'Mã kỳ học'
-                                          default: '62cf870f4858743781d08b27'
-                                      campus_id:
-                                          type: 'integer'
-                                          description: 'Mã cơ sở, mã này được nối với bảng campus(cumpus)'
-                                          default: '6247da5ee56ba5e634559901'
-                                      code_request:
-                                          type: 'string'
-                                          description: 'Yêu cầu của vị trí thực tập'
-                                      description:
-                                          type: 'string'
-                                          description: 'Mô tả'
-                                      createAt:
-                                          type: 'string'
-                                          format: 'date'
-                                          description: 'Thời gian doanh nghiệp được thêm vào hệ thống'
-            responses:
-                '201':
-                    description: 'successful operation'
-                '202':
-                    description: 'Already exit narrow'
-                '400':
-                    description: 'Invalid manager'
-    /business/{id}:
-        patch:
-            security:
-                - Bearer: []
-            tags:
-                - 'Businesses'
-            summary: 'Cập nhật thông tin campus'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'id'
-                  in: 'path'
-                  description: 'Id của manager , lấy ở phần danh sách campus'
-                  required: true
-                  type: 'string'
-                - name: 'data'
-                  in: 'body'
-                  description: 'Tham số key/value thêm mới doanh nghiệp'
-                  required: true
-                  schema:
-                      type: 'object'
-                      properties:
-                          campus_id:
-                              type: 'string'
-                              default: '6247da5ee56ba5e634559901'
-                              description: 'mã cơ sở, VD: cơ sở hà nội'
-                          smester_id:
-                              type: 'string'
-                              default: '62cf870f4858743781d08b27'
-                              description: 'Kỳ học'
-                          marjors:
-                              type: 'string'
-                              default: '62cf83eb4858743781d08ad3'
-                              description: 'Chuyên ngành : Thiết kế website'
-                          data:
-                              type: 'array'
-                              items:
-                                  properties:
-                                      campus_id:
-                                          type: 'string'
-                                          default: '6247da5ee56ba5e634559901'
-                                      course:
-                                          type: 'string'
-                                          default: '15.3'
-                                      email:
-                                          type: 'string'
-                                          default: 'example@fpt.edu.vn'
-                                      mssv:
-                                          type: 'string'
-                                          default: 'ph1111'
-                                      name:
-                                          type: 'string'
-                                          default: 'Nguyễn Văn A'
-                                      smester_id:
-                                          type: 'string'
-                                          default: '62cf870f4858743781d08b27'
-                                          description: 'Kỳ học'
-                                      status:
-                                          type: 'string'
-                                          default: 'TN21'
-                                      supplement:
-                                          type: 'string'
-                                          default: undefined
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
-        delete:
-            security:
-                - Bearer: []
-            tags:
-                - 'Businesses'
-            summary: 'Xoá manager'
-            description: ''
-            produces:
-                - 'application/json'
-            parameters:
-                - name: 'id'
-                  in: 'path'
-                  description: 'Id của manager , lấy ở phần danh sách manager'
-                  required: true
-                  type: 'string'
-            responses:
-                '200':
-                    description: 'successful operation'
-                '400':
-                    description: 'Invalid manager'
 definitions:
     students:
         type: 'object'
